--- a/init.p940.rc
+++ b/init.p940.rc
@@ -141,7 +141,7 @@ on boot
 
     # Flash storage isn't a good entropy source, and only causes locking
     # overhead in the kernel. Turn it off.
-    write /sys/block/mmcblk0/queue/add_random 0
+    write /sys/block/mmcblk0/queue/add_random 1
 
     chown system system /sys/devices/virtual/input/lge_touch/keyguard
 
@@ -213,44 +213,37 @@ service charger /charger
     oneshot
 
 service pvrsrvinit /vendor/bin/pvrsrvinit
-    disabled
     user root
     group root
     oneshot
 
-service p2p_supplicant /system/bin/wpa_supplicant \
-        -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -N \
+service p2p_supplicant /system/bin/wpa_supplicant
+        -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -N
         -ip2p0 -Dnl80211 -c/data/misc/wifi/p2p_supplicant.conf -e/data/misc/wifi/entropy.bin -puse_p2p_group_interface=1
     class main
     socket wpa_wlan0 dgram 660 wifi wifi
-    disabled
     oneshot
 
-service wpa_supplicant /system/bin/wpa_supplicant \
+service wpa_supplicant /system/bin/wpa_supplicant
         -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin
     class main
     socket wpa_wlan0 dgram 660 wifi wifi
-    disabled
     oneshot
 
 service dhcpcd_wlan0 /system/bin/dhcpcd -ABDKL
     class main
-    disabled
     oneshot
 
 service dhcpcd_p2p /system/bin/dhcpcd -aABKL
     class main
-    disabled
     oneshot
 
 service iprenew_wlan0 /system/bin/dhcpcd -n
     class main
-    disabled
     oneshot
 
 service iprenew_p2p /system/bin/dhcpcd -n
     class main
-    disabled
     oneshot
 
 service glgps /system/bin/glgps -c /system/etc/gps_brcm_conf.xml
